# marketing-agent

./: README.md
gradio-adk-agent/: app.py  gradio_app.py  pyproject.toml
gradio-adk-agent/keyword_agent/: .env  .gitignore  __init__.py  keyword_agent.py  tools.py
